tests/diagnostics/catalog/snapshots/ir/IR0054.snap
error[IR0054]: IR_E_RUNTIME_PANIC
 --> tests/diagnostics/catalog/sources/ir/IR0054.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0054
  = help: keep IR validation diagnostics structured and catalog-backed
